--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,10 @@
 :root{
     --container-fundo: #f9f9f9;
+    --box-cor:#f9f9f9;
     --blocos:#ededed;
+    --blocos-hover:#e7e7e7;
     --fonte-cor-titulos:#191211;
+    --borda-apple:#141414;
     --fonte-cor-opcoes:#b2b2b2;
     --fonte-cor-salvar:#999999;
     --fundo-help: #B2B2B2;
@@ -11,6 +14,7 @@
     --google-borda:#f3f3f3;
     --borda-selecao:#e8e8e8;
     --verificado:#bc252a;
+    --detalhes:#d950e5;
 }
 
 *{
