--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -8,6 +8,12 @@
     flex-direction: column;
 }
 
+#login-container h1{
+    font-family: Lexend;
+    font-size: 25px;
+    margin-bottom: 0;
+}
+
 .help{
     position: absolute;
     width: 15px;
@@ -32,7 +38,7 @@
     margin-top:10px;
     border-radius: 5px;
     padding:25px;
-    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.432);
+    box-shadow: 1px 5px 5px 5px rgba(0, 0, 0, 0.432);
 }
 
 #triangulo-para-esquerda {
@@ -44,11 +50,24 @@
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent; 
     border-right:10px solid #f9f9f9; 
+    
   }
   
+.mensagem span{
+    color: var(--verificado);
+}
+.mensagem p{
+    font-family: Lexend;
+    font-size: 14px;
+}
 
 .mensagem > p{
     margin-top:10px;
+}
+
+img#seta-vermelha{
+    width:auto;
+    height: 13px;
 }
 
 .help:hover .mensagem{
@@ -57,9 +76,26 @@
 
 .logo{
     margin:40px;
+    margin-top:70px;
     width: 50px;
     height: auto;
 }
+
+.campoSenha{
+    width: 100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+    
+#mostrar{
+    right: 30px;
+    position: absolute;
+    cursor: pointer;
+    opacity: 0;
+}
+
+
 
 .campos-form{
     width: 80%;
@@ -80,11 +116,17 @@
     color: var(--fonte-cor-input);
     font-weight: bold;
     padding:15px;
+    
 }
 
 .campos-form input:hover{
     background-color: var(--blocos-hover);
 }
+
+.campos-form input:focus{
+    background-color: var(--container-fundo);
+}
+
 
 .redes-sociais{
     display: flex;
@@ -161,6 +203,10 @@
     margin-left:30px;
 }
 
+.salvar label:hover{
+    color: #5e5d5d;
+}
+
 .check{
     position: absolute;
     height: 20px;
@@ -229,6 +275,8 @@
     text-decoration: none;
     color:var(--fonte-cor-opcoes);
     transition: 0.1s;
+    font-family: Poppins;
+    font-weight: 800;
 }
 
 
